compile_error.txt


###################### OPENCL PROGRAM BUILD DEBUG OUTPUT ######################

C:\Users\farre\AppData\Local\Temp\comgr-2af810\input\CompileSource:157:37: error: expected ';' after expression
            biases[bias_index] = 0.0
                                    ^
                                    ;
1 error generated.
Error: Failed to compile source (from CL or HIP source to LLVM IR).
###############################################################################

